kubernetes-deployment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: tools

---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: registry
  labels:
    app: registry
  namespace: tools
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: registry
        component: main
    spec:
      containers:
      - name: registry
        image: registry:2.5
        imagePullPolicy: Always
        resources:
          limits:
            cpu: 100m
            memory: 100Mi
          requests:
            cpu: 100m
            memory: 100Mi
        volumeMounts:
        - name: registry-persistent-storage
          mountPath: /var/lib/registry
      volumes:
      - name: registry-persistent-storage
        persistentVolumeClaim:
          claimName: registry-pv-claim
---
kind: Service
apiVersion: v1
metadata:
  name: registry
  namespace: tools
spec:
  selector:
    app: registry
  ports:
    - port: 5000
      targetPort: 5000

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: registry-routes
  namespace: tools
  annotations:
    kolihub.io/registry.stage01.obi.dmz: primary
spec:
  rules:
  - host: registry.stage01.obi.dmz
    http:
      paths:
      - path: /
        backend:
          serviceName: registry
          servicePort: 5000
